--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
-baseURL = "http://example.org/"
+baseURL = "https://aaltomcc.github.io/cs-ej4101-fall-2019-086-advanced/"
 
 languageCode = "en-us"
 
 title = "My New Hugo Site"
 
-theme= "hugo-kiera"
+theme = "hugo-kiera"
